<resources>
    <string name="app_name">Pensum</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="my_tasks">MY TASKS</string>
    <string name="messages">MESSAGES</string>
    <string name="log_out">LOG OUT</string>
    <string name="bidding">MY BIDS</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_hint">Help me clean my room</string>
    <string name="description_hint">Enter a description...</string>
    <string name="budget">Budget</string>
    <string name="budget_hint">$50.00</string>
    <string name="location">Zip Code</string>
    <string name="location_hint">30318</string>
    <string name="type_hint">Cleaning</string>
    <string name="type">HashTag</string>
    <string name="add_task">Add Task</string>
    <string name="send">Send</string>
    <string name="contact">Contact</string>
    <string name="done">Done</string>
    <string name="filter_search">Filter Search</string>
    <string name="search">Search</string>
    <string name="posted">MY TASKS</string>
    <string name="accepted">Accepted</string>
    <string name="won">Won</string>
    <string name="completed">Completed</string>
    <string name="accept">Accept</string>
    <string name="Decline"/>
    <string name="decline">Decline</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price Offered</string>
    <string name="zero_dollars">$0.00</string>
    <string name="choose_candidate">Choose a Candidate</string>
    <string name="complete">Complete</string>
    <string name="profile_me">My Profile Picture</string>
    <string name="profile_other">Other Profile Picture</string>
    <string name="mark_task_complete">Please Rate Your Candidate</string>
    <string name="status_label">Status:</string>
    <string name="budget_label">Budget:</string>
    <string name="no_data_available">NO DATA AVAILABLE AT THIS MOMENT</string>
    <string name="complete_status">Complete Status</string>
    <string name="profile_skill">SKILLS</string>
    <string name="profile_status">STATUS</string>
    <string name="filter_tasks">Filter</string>
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_declined">Declined Bid</string>
    <string name="snackbar_accepted">Accepted Bid</string>
    <string name="gcm_sender_id">id:387074910313</string>
    <string name="task_title">TASK</string>
</resources>
