<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/tvTitleLabel"
        android:layout_alignBaseline="@+id/etTitle"
        android:layout_alignBottom="@+id/etTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:layout_alignParentTop="true"
        android:hint="@string/title_hint"
        android:layout_toRightOf="@+id/tvLocationLabel"
        android:layout_toEndOf="@+id/tvLocationLabel"
        android:maxLength="70"/>

   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/tvDescriptionLabel"
        android:layout_alignBaseline="@+id/etDescription"
        android:layout_alignBottom="@+id/etDescription"
        android:layout_alignLeft="@+id/tvTitleLabel"
        android:layout_alignStart="@+id/tvTitleLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:layout_alignParentTop="false"
        android:layout_below="@id/etTitle"
        android:layout_toRightOf="@+id/tvDescriptionLabel"
        android:hint="@string/description_hint"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:text="@string/budget"
        android:id="@+id/tvBudgetLabel"
        android:layout_alignBaseline="@+id/etBudget"
        android:layout_alignBottom="@+id/etBudget"
        android:layout_alignLeft="@+id/tvTitleLabel"
        android:layout_alignStart="@+id/tvTitleLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/etBudget"
        android:hint="@string/budget_hint"
        android:layout_below="@+id/etLocation"
        android:layout_alignLeft="@+id/etLocation"
        android:layout_alignStart="@+id/etLocation"
        android:maxLength="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLocationLabel"
        android:text="@string/location"
        android:layout_alignBaseline="@+id/etLocation"
        android:layout_alignBottom="@+id/etLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLocation"
        android:hint="@string/location_hint"
        android:layout_below="@+id/etTitle"
        android:layout_toRightOf="@+id/tvLocationLabel"
        android:layout_toEndOf="@+id/tvLocationLabel"
        android:inputType="number"
        android:maxLength="5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTypeLabel"
        android:text="@string/type"
        android:layout_alignBaseline="@+id/etType"
        android:layout_alignBottom="@+id/etType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etType"
        android:hint="@string/type_hint"
        android:layout_below="@+id/etBudget"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/etBudget"
        android:layout_alignStart="@+id/etBudget"
        android:maxLength="14"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/largeButton"
        android:text="@string/add_task"
        android:textColor="@color/colorSecondaryText"
        android:textSize="20sp"
        android:id="@+id/btnAddTask"
        android:layout_below="@+id/ibAddPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/ivTaskPicPreview"
        android:layout_below="@+id/etType"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibAddPhoto"
        android:layout_below="@+id/ivTaskPicPreview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        android:background="?android:attr/selectableItemBackground"/>
</RelativeLayout>