<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:src="@drawable/ic_person_black_24dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        tools:text="T. Chu"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginTop="5dp"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbRating"
        android:layout_below="@+id/tvName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:isIndicator="true"
        android:stepSize="0.5"
        android:numStars="5"/>

    <Button
        style="@style/smallYellowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/btnAccept"
        android:layout_toRightOf="@+id/btnMessage"
        android:layout_toEndOf="@+id/btnMessage"
        android:layout_below="@+id/rbRating"/>

    <Button
        style="@style/smallGreyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:id="@+id/btnDecline"
        android:layout_below="@+id/rbRating"
        android:layout_toRightOf="@+id/btnAccept"
        android:layout_toEndOf="@+id/btnAccept"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$250"
        android:id="@+id/tvOffer"
        style="@style/textMoney"
        android:layout_above="@+id/rbRating"
        android:layout_centerHorizontal="true"/>

    <Button
        style="@style/smallYellowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:id="@+id/btnMessage"
        android:layout_alignLeft="@+id/rbRating"
        android:layout_alignStart="@+id/rbRating"
        android:layout_below="@+id/rbRating"/>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/ivNewMessage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>


</RelativeLayout>